--- a/workflow-ui/webContent/view/cleanup.xhtml
+++ b/workflow-ui/webContent/view/cleanup.xhtml
@@ -8,12 +8,16 @@
       <h:form id="clanupForm">
         <p:growl id="growl" showDetail="true" />
         <h:panelGroup styleClass="card card-w-title cleanup-container" layout="block">
+          <i class="si si-recycling-trash-bin-2 card-header-title margin-right-5"/>
           <h:outputText styleClass="card-header-title" value="Cleanup" />
+          <p:outputPanel styleClass="margin-top-5">
+            <h:outputText value="When you click throuh different processes you create different types of data like cases, tasks etc. Here you can clean that data to refresh your designer."/>
+          </p:outputPanel>
           <p:panelGrid columns="1" layout="grid" styleClass="ui-panelgrid-blank main-starts-container">
             <p:selectBooleanCheckbox id="casesAndTasksCheckbox" value="#{cleanupBean.casesTasksAndDependent}" itemLabel="All Cases, Tasks and dependent objects" />
             <p:selectBooleanCheckbox id="businessDataCheckbox" value="#{cleanupBean.businessDataAndSearchIndex}" itemLabel="All Business Data and the search index" />
             <p:selectBooleanCheckbox id="identityProviderTokenCheckbox" value="#{cleanupBean.identityProviderTokens}" itemLabel="All identity provider tokens" />
-            <p:commandButton id="cleanupBtn" value="Cleanup" actionListener="#{cleanupBean.cleanup}" update="growl" disabled="#{!adminBean.isWorkflowAdmin() or !engineModeBean.demoOrDesigner}"/>
+            <p:commandButton id="cleanupBtn" value="Cleanup" icon="si si-recycling-trash-bin-2 " actionListener="#{cleanupBean.cleanup}" update="growl" disabled="#{!adminBean.isWorkflowAdmin() or !engineModeBean.demoOrDesigner}"/>
           </p:panelGrid>
         </h:panelGroup>
       </h:form>
