--- a/workflow-ui/webContent/view/starts.xhtml
+++ b/workflow-ui/webContent/view/starts.xhtml
@@ -9,7 +9,7 @@
       <h:form id="startsForm">
       <h:panelGroup styleClass="card card-w-title task-detail-container" layout="block">
         <h:outputText value="Starts" styleClass="card-header-title" />
-        <p:panel id="main-starts-container" styleClass="main-starts-container">
+        <p:panel styleClass="main-starts-container">
           <f:facet name="header">
             <p:outputPanel>
               <p:inputText id="filter" placeholder="Search project or start" value="#{processesBean.filter}">
