--- a/workflow-ui/webContent/includes/template/sidebar.xhtml
+++ b/workflow-ui/webContent/includes/template/sidebar.xhtml
@@ -18,7 +18,7 @@
               <p:menuitem id="sr_cases" value="Cases" icon="si si-task-list-approve" url="cases.xhtml"/>
 
               <p:submenu id="sr_actions" label="Actions" icon="si si-tools-wench">
-                <p:menuitem id="sr_signals" value="Signals" icon="si si-network-signal" url="#" />
+                <p:menuitem id="sr_signals" value="Signals" icon="si si-network-signal" url="signals.xhtml" />
                 <p:menuitem id="sr_intermediate_events" value="Intermediate Events" icon="si si-analytics-graph" url="#" />
                 <p:menuitem id="sr_cleanup" value="Cleanup" icon="si si-recycling-trash-bin-2" url="cleanup.xhtml" rendered="#{engineModeBean.demoOrDesigner}"/>
               </p:submenu>
