--- a/workflow-ui/webContent/includes/components/userTable.xhtml
+++ b/workflow-ui/webContent/includes/components/userTable.xhtml
@@ -3,7 +3,7 @@
   xmlns:c="http://xmlns.jcp.org/jsp/jstl/core" xmlns:ic="http://ivyteam.ch/jsf/component"
   xmlns:p="http://primefaces.org/ui" xmlns:pe="http://primefaces.org/ui/extensions">
   <h:form id="loginTable">
-    <h:panelGroup styleClass="card card-w-title task-detail-container"
+    <h:panelGroup styleClass="card card-w-title custom-card"
       layout="block">
       <h:outputText value="Login Table" style="font-size:16pt; font-weight:bold" />
       <br />
