--- a/workflow-ui/webContent/view/cases.xhtml
+++ b/workflow-ui/webContent/view/cases.xhtml
@@ -7,7 +7,7 @@
     <ui:define name="content">
     <f:event type="preRenderView" listener="#{tasksBean.checkIfLoggedIn}" />
     <h:form id="casesForm">
-      <h:panelGroup styleClass="card card-w-title task-detail-container" layout="block">
+      <h:panelGroup styleClass="card card-w-title custom-card" layout="block">
         <div class="table-title-switch">
           <h:outputText value="Cases" class="card-header-title"/>
           <h:panelGroup class="action-container" layout="block" rendered="#{adminBean.isWorkflowAdmin()}">
