--- a/workflow-ui/webContent/view/starts.xhtml
+++ b/workflow-ui/webContent/view/starts.xhtml
@@ -7,7 +7,7 @@
   <ui:composition template="../includes/template/template.xhtml">
     <ui:define name="content">
       <h:form id="startsForm">
-      <h:panelGroup styleClass="card card-w-title task-detail-container" layout="block">
+      <h:panelGroup styleClass="card card-w-title custom-card" layout="block">
         <h:outputText value="Starts" styleClass="card-header-title" />
         <p:panel styleClass="main-starts-container">
           <f:facet name="header">
