--- a/workflow-ui/webContent/view/taskDetails.xhtml
+++ b/workflow-ui/webContent/view/taskDetails.xhtml
@@ -14,7 +14,7 @@
 
       <div class="ui-g">
         <div class="ui-g-12">
-          <h:panelGroup styleClass="card card-w-title task-detail-container" layout="block">
+          <h:panelGroup styleClass="card card-w-title custom-card" layout="block">
             <h:form id="form">
               <div class="task-detail-title straight-text-icon">
                 <i class="si si-lg si-common-file-text detail-title-icon" />
@@ -126,7 +126,7 @@
         </div>
 
         <div class="ui-g-12">
-          <div class="card card-w-title task-detail-container">
+          <div class="card card-w-title custom-card">
             <div class="task-detail-title straight-text-icon">
               <i class="si si-lg si-synchronize-arrow-clock detail-title-icon" />
               <h:outputText value="Workflow Events" />
