--- a/workflow-ui/webContent/view/tasks.xhtml
+++ b/workflow-ui/webContent/view/tasks.xhtml
@@ -7,7 +7,7 @@
     <ui:define name="content">
     <f:event type="preRenderView" listener="#{tasksBean.checkIfLoggedIn}" />
     <h:form id="tasksForm">
-      <h:panelGroup styleClass="card card-w-title task-detail-container" layout="block">
+      <h:panelGroup styleClass="card card-w-title custom-card" layout="block">
         <div class="table-title-switch">
           <h:outputText value="Tasks" style="font-size:16pt; font-weight:bold" />
         </div>
