--- a/workflow-ui/webContent/includes/components/signals/sendSignal.xhtml
+++ b/workflow-ui/webContent/includes/components/signals/sendSignal.xhtml
@@ -13,7 +13,7 @@
   <div class="ui-g-12 margin-top-10">
     <h:panelGroup styleClass="md-inputfield margin-top-10">
       <p:inputText id="signal-payload-input" value="#{signalsBean.payload}" styleClass="width-100" />
-      <p:outputLabel value="Payload (String)" for="@previous" />
+      <p:outputLabel value="Payload" for="@previous" />
     </h:panelGroup>
   </div>
   <p:commandButton id="signalBtn" update="growl, fired-signals-table"
