--- a/workflow-ui/webContent/view/signals.xhtml
+++ b/workflow-ui/webContent/view/signals.xhtml
@@ -8,7 +8,7 @@
     <ui:define name="content">
       <h:form id="signalForm">
         <p:growl id="growl" showDetail="true" />
-        <p:panelGrid columns="3" styleClass="ui-g ui-panelgrid-blank grid-smaller-padding" layout="grid"
+        <p:panelGrid columns="3" styleClass="ui-panelgrid-blank grid-smaller-padding" layout="grid"
           columnClasses="ui-g-12 ui-md-4, ui-g-12 ui-md-8, ui-g-12" >
 
           <h:panelGroup styleClass="card card-w-title custom-card height-100" layout="block">
@@ -18,6 +18,7 @@
 
           <h:panelGroup styleClass="card card-w-title custom-card" layout="block">
             <b><h:outputText value="Boundary signals" styleClass="subtitle" /></b>
+            <ui:include src="/includes/components/signals/boundarySignals.xhtml" />
           </h:panelGroup>
 
           <h:panelGroup styleClass="card card-w-title card-margin-0" layout="block">
