--- a/workflow-ui/webContent/includes/components/signals/boundarySignals.xhtml
+++ b/workflow-ui/webContent/includes/components/signals/boundarySignals.xhtml
@@ -6,7 +6,9 @@
   <p:dataTable id="boundary-signals-table" var="receiver" value="#{signalsBean.boundarySignals}"
     styleClass="margin-top-10" rows="5" paginator="true" paginatorPosition="bottom" paginatorAlwaysVisible="false">
     <p:column headerText="Signal pattern">
-      <h:outputText value="#{receiver.signalPattern}" />
+      <p:commandLink value="#{receiver.signalPattern}"
+        actionListener="#{signalsBean.sendBoundarySignal(receiver.signalPattern)}"
+        update="@form" />
     </p:column>
     <p:column headerText="Waiting task">
       <h:link outcome="taskDetails">
