--- a/workflow-ui/webContent/view/starts.xhtml
+++ b/workflow-ui/webContent/view/starts.xhtml
@@ -7,37 +7,64 @@
   <ui:composition template="../includes/template/template.xhtml">
     <ui:define name="content">
       <h:form id="startsForm">
-      <h:panelGroup styleClass="card card-w-title custom-card" layout="block">
-        <h:outputText value="Starts" styleClass="card-header-title" />
-        <p:panel styleClass="main-starts-container">
-          <f:facet name="header">
-            <p:outputPanel>
-              <p:inputText id="filter" placeholder="Search project or start" value="#{processesBean.filter}">
-                <p:ajax event="keyup" update="projectStarts" />
-              </p:inputText>
-            </p:outputPanel>
-          </f:facet>
-          <p:accordionPanel var="pmv" value="#{processesBean.PMVs}" id="projectStarts" activeIndex="0" multiple="true">
-            <p:tab titleStyleClass="straight-text-icon">
-              <f:facet name="title">
-                <i class="si si-#{pmv.stateIcon}" title="#{pmv.state} - #{pmv.versionName}"></i>
-                <h:outputText styleClass="starts-project-name" value="#{pmv.projectName}"/>
-              </f:facet>
-              <ui:repeat var="start" value="#{pmv.startElements}">
-                <p:panel styleClass="start-element" rendered="#{pmv.active}">
-                  <h:commandLink action="#{processesBean.executeStart(start.link.relative)}" id="start-link" class="flex-space">
-                    <span class="straight-text-icon">
-                      <i class="si si-controls-play" style="padding-right: 8px"></i>
-                      <span>#{start.getDisplayName()}</span>
-                    </span>
-                    <span>#{start.getDescription()}</span>
-                  </h:commandLink>
-                </p:panel>
-              </ui:repeat>
-            </p:tab>
-          </p:accordionPanel>
-        </p:panel>
-      </h:panelGroup>
+        <h:panelGroup styleClass="card card-w-title custom-card" layout="block">
+          <h:outputText value="Starts" styleClass="card-header-title" />
+          <p:panel styleClass="main-starts-container">
+            <f:facet name="header">
+              <p:outputPanel>
+                <p:inputText id="filter" placeholder="Search project or start" value="#{processesBean.filter}">
+                  <p:ajax event="keyup" update="projectStarts" />
+                </p:inputText>
+              </p:outputPanel>
+            </f:facet>
+            <p:accordionPanel var="pmv" value="#{processesBean.PMVs}" id="projectStarts" activeIndex="0" multiple="true">
+              <p:tab titleStyleClass="straight-text-icon">
+                <f:facet name="title">
+                  <i class="si si-#{pmv.stateIcon}" title="#{pmv.state} - #{pmv.versionName}"></i>
+                  <h:outputText styleClass="starts-project-name" value="#{pmv.projectName}" />
+                </f:facet>
+
+                <h:panelGroup styleClass="margin-top-10" layout="block" rendered="#{!empty pmv.caseMapStarts}">
+                  <b><h:outputText value="Case Map Starts" /></b>
+                </h:panelGroup>
+                <p:repeat value="#{pmv.caseMapStarts}" var="casemapStart">
+                  <p:panel styleClass="start-element" rendered="#{pmv.active}">
+                    <p:commandLink action="#{casemapStart.execute}" id="start-link"
+                      class="flex-space">
+                      <span class="straight-text-icon"> <i class="si si-controls-play" style="padding-right: 8px"></i>
+                        <span>#{casemapStart.displayName}</span>
+                      </span>
+                      <span>#{casemapStart.description}</span>
+                    </p:commandLink>
+                  </p:panel>
+                </p:repeat>
+
+                <h:panelGroup styleClass="margin-top-10" layout="block" rendered="#{!empty pmv.categories}">
+                  <b><h:outputText value="Process Starts" /></b>
+                </h:panelGroup>
+                <p:repeat value="#{pmv.categories}" var="category">
+                  <p:outputPanel styleClass="margin-top-10">
+                    <i class="#{category.cssIcon} table-icon"></i>
+                    <span title="#{category.tooltip}">#{category.name}</span>
+                  </p:outputPanel>
+
+                  <p:repeat value="#{category.starts}" var="start">
+                    <p:panel styleClass="start-element" rendered="#{pmv.active}">
+                      <p:commandLink action="#{start.execute}" id="start-link"
+                        class="flex-space">
+                        <span class="straight-text-icon"> <i class="si si-controls-play"
+                          style="padding-right: 8px"></i> <span>#{start.displayName}</span>
+                        </span>
+                        <span>#{start.description}</span>
+                      </p:commandLink>
+                    </p:panel>
+                  </p:repeat>
+                </p:repeat>
+
+              </p:tab>
+            </p:accordionPanel>
+          </p:panel>
+        </h:panelGroup>
       </h:form>
     </ui:define>
   </ui:composition>
