XIVYWF-112 Improve case list in case details, fix test

--- a/workflow-ui/webContent/includes/components/caseDetails/documents.xhtml
+++ b/workflow-ui/webContent/includes/components/caseDetails/documents.xhtml
@@ -3,7 +3,7 @@
   xmlns:c="http://xmlns.jcp.org/jsp/jstl/core" xmlns:ic="http://ivyteam.ch/jsf/component"
   xmlns:p="http://primefaces.org/ui" xmlns:pe="http://primefaces.org/ui/extensions">
 
-  <ul>
+  <ul class="custom-list">
     <ui:repeat var="document" value="#{casesDetailsBean.documents}">
       <li class="document-entry" style="list-style-type: none;">
         <span class="margin-right-5 si si-lg si-#{document.icon}"/>
