--- a/workflow-ui/webContent/view/caseDetails.xhtml
+++ b/workflow-ui/webContent/view/caseDetails.xhtml
@@ -54,7 +54,7 @@
             layout="block">
             <h:panelGroup layout="block" styleClass="task-detail-title straight-text-icon related-element">
               <i class="si si-lg si-task-list-approve detail-title-icon" />
-              <h:outputText value="Case list" />
+              <h:outputText value="Case hierarchy" />
             </h:panelGroup>
             <ui:include src="/includes/components/caseDetails/caseList.xhtml" />
           </h:panelGroup>
