--- a/workflow-ui/webContent/includes/components/caseDetails/caseList.xhtml
+++ b/workflow-ui/webContent/includes/components/caseDetails/caseList.xhtml
@@ -1,29 +1,21 @@
 <ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:f="http://xmlns.jcp.org/jsf/core"
   xmlns:h="http://xmlns.jcp.org/jsf/html" xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
   xmlns:c="http://xmlns.jcp.org/jsp/jstl/core" xmlns:ic="http://ivyteam.ch/jsf/component"
-  xmlns:p="http://primefaces.org/ui" xmlns:pe="http://primefaces.org/ui/extensions">
+  xmlns:p="http://primefaces.org/ui" xmlns:pe="http://primefaces.org/ui/extensions"
+  xmlns:jc="http://java.sun.com/jsf/composite/components">
 
-  <p:dataTable id="cases" var="case" value="#{casesDetailsBean.selectedCase.getBusinessCase()}" widgetVar="casesTable"
-    emptyMessage="No Tasks found with given criteria" style="margin-top:10px" lazy="true" paginatorPosition="bottom"
-    rows="10" rowsPerPageTemplate="10,20,50" paginator="true" paginatorAlwaysVisible="false"
-    paginatorTemplate="{RowsPerPageDropdown} {FirstPageLink} {PreviousPageLink} {CurrentPageReport} {NextPageLink} {LastPageLink}">
+  <h:panelGroup layout="block" class="action-container #{casesDetailsBean.isCurrentHierarchyCase(casesDetailsBean.selectedCase.getBusinessCase())}">
+    <jc:caseLink case="#{casesDetailsBean.selectedCase.getBusinessCase()}"/>
+  </h:panelGroup>
 
-    <p:column filterBy="#{case.getState()}" styleClass="icon-row">
-      <i class="si si-lg si-#{casesBean.getStateIcon(case.getState())}" title="State #{case.getState()}"></i>
-    </p:column>
-
-    <p:column headerText="Name" filterBy="#{case.getName()}">
-      <h:outputText id="caseName" value="#{not empty case.getName() ? case.getName() : 'No Case name' }"
-        style="color:#212121" />
-      <p:tooltip for="caseName" value="Case ID: #{case.getId()}" position="top" />
-    </p:column>
-
-    <p:column style="width: 60px; text-align: center;">
-      <h:link outcome="caseDetails">
-        <f:param name="case" value="#{case.getId()}" />
-        <i class="si si-lg si-information-circle"></i>
-      </h:link>
-    </p:column>
-  </p:dataTable>
+  <h:panelGroup layout="block">
+    <ul class="subcases-list">
+      <ui:repeat var="case" value="#{casesDetailsBean.caseList}">
+        <li style="list-style-type: none;" class="#{casesDetailsBean.isCurrentHierarchyCase(case)}">
+          <jc:caseLink case="#{case}"/>
+        </li>
+      </ui:repeat>
+    </ul>
+  </h:panelGroup>
 
 </ui:composition>
