--- a/workflow-ui/webContent/includes/components/signals/firedSignals.xhtml
+++ b/workflow-ui/webContent/includes/components/signals/firedSignals.xhtml
@@ -1,7 +1,8 @@
 <ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:f="http://xmlns.jcp.org/jsf/core"
   xmlns:h="http://xmlns.jcp.org/jsf/html" xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
   xmlns:c="http://xmlns.jcp.org/jsp/jstl/core" xmlns:ic="http://ivyteam.ch/jsf/component"
-  xmlns:p="http://primefaces.org/ui" xmlns:pe="http://primefaces.org/ui/extensions">
+  xmlns:p="http://primefaces.org/ui" xmlns:pe="http://primefaces.org/ui/extensions"
+  xmlns:jc="http://java.sun.com/jsf/composite/components">
 
   <p:dataTable id="fired-signals-table" var="signal" value="#{signalsBean.firedSignals}" styleClass="margin-top-10"
     rows="10" paginator="true" paginatorAlwaysVisible="false"
@@ -29,10 +30,7 @@
     </p:column>
     <p:column headerText="Created cases" colspan="2">
       <p:repeat var="task" value="#{signal.createdTasks}" varStatus="status">
-        <h:link outcome="caseDetails">
-          <f:param name="case" value="#{task.case.id}" />
-          <h:outputText value="#{task.case}#{status.last ? '' : ', '}" />
-        </h:link>
+        <jc:caseLink case="#{task.case}" />
       </p:repeat>
     </p:column>
   </p:dataTable>
