--- a/workflow-ui/webContent/view/starts.xhtml
+++ b/workflow-ui/webContent/view/starts.xhtml
@@ -29,10 +29,8 @@
                 </h:panelGroup>
                 <p:repeat value="#{pmv.caseMapStarts}" var="casemapStart">
                   <p:panel styleClass="start-element" rendered="#{pmv.active}">
-                    <p:commandLink action="#{casemapStart.execute}" id="start-link"
-                      class="flex-space">
-                      <span class="straight-text-icon"> <i class="si si-controls-play" style="padding-right: 8px"></i>
-                        <span>#{casemapStart.displayName}</span>
+                    <p:commandLink action="#{casemapStart.execute}" class="flex-space start-link">
+                      <span class="straight-text-icon"> <i class="si si-controls-play margin-right-5"></i> <span>#{casemapStart.displayName}</span>
                       </span>
                       <span>#{casemapStart.description}</span>
                     </p:commandLink>
@@ -50,10 +48,8 @@
 
                   <p:repeat value="#{category.starts}" var="start">
                     <p:panel styleClass="start-element" rendered="#{pmv.active}">
-                      <p:commandLink action="#{start.execute}" id="start-link"
-                        class="flex-space">
-                        <span class="straight-text-icon"> <i class="si si-controls-play"
-                          style="padding-right: 8px"></i> <span>#{start.displayName}</span>
+                      <p:commandLink action="#{start.execute}" class="flex-space start-link">
+                        <span class="straight-text-icon"> <i class="si si-controls-play margin-right-5"></i> <span>#{start.displayName}</span>
                         </span>
                         <span>#{start.description}</span>
                       </p:commandLink>
