--- a/workflow-ui/webContent/includes/components/signals/firedSignals.xhtml
+++ b/workflow-ui/webContent/includes/components/signals/firedSignals.xhtml
@@ -30,7 +30,7 @@
     </p:column>
     <p:column headerText="Created cases" colspan="2">
       <p:repeat var="task" value="#{signal.createdTasks}" varStatus="status">
-        <jc:caseLink case="#{task.case}" />
+        <jc:caseLink case="#{task.case}" id="created-case"/>
       </p:repeat>
     </p:column>
   </p:dataTable>
