--- a/workflow-ui/webContent/view/cleanup.xhtml
+++ b/workflow-ui/webContent/view/cleanup.xhtml
@@ -11,7 +11,7 @@
           <i class="si si-recycling-trash-bin-2 card-header-title margin-right-5"/>
           <h:outputText styleClass="card-header-title" value="Cleanup" />
           <p:outputPanel styleClass="margin-top-5">
-            <h:outputText value="When you click throuh different processes you create different types of data like cases, tasks etc. Here you can clean that data to refresh your designer."/>
+            <h:outputText value="When you click throuh different processes you create different types of data like cases, tasks etc. Here you can clean that data to reset your designer."/>
           </p:outputPanel>
           <p:panelGrid columns="1" layout="grid" styleClass="ui-panelgrid-blank main-starts-container">
             <p:selectBooleanCheckbox id="casesAndTasksCheckbox" value="#{cleanupBean.casesTasksAndDependent}" itemLabel="All Cases, Tasks and dependent objects" />
