--- a/workflow-ui/webContent/includes/components/signals/boundarySignals.xhtml
+++ b/workflow-ui/webContent/includes/components/signals/boundarySignals.xhtml
@@ -6,13 +6,20 @@
 
   <p:dataTable id="boundary-signals-table" var="receiver" value="#{signalsBean.boundarySignals}"
     styleClass="margin-top-10" rows="5" paginator="true" paginatorPosition="bottom" paginatorAlwaysVisible="false">
+    <p:column width="40">
+      <i class="si si-lg si-network-signal"/>
+    </p:column>
     <p:column headerText="Signal pattern">
-      <p:commandLink value="#{receiver.signalPattern}"
-        actionListener="#{signalsBean.sendBoundarySignal(receiver.signalPattern)}"
-        update="@form" />
+      <h:outputText value="#{receiver.signalPattern}" />
     </p:column>
     <p:column headerText="Waiting task">
-      <jc:taskLink task="#{receiver.waitingTask}" id="waiting-task"/>
+      <jc:taskLink task="#{receiver.waitingTask}" id="waiting-task" />
+    </p:column>
+    <p:column width="40">
+      <p:commandLink id="send-signal-icon" actionListener="#{signalsBean.sendBoundarySignal(receiver.signalPattern)}" update="@form">
+        <i class="si si-lg si-send-email" />
+      </p:commandLink>
+      <p:tooltip for="send-signal-icon" value="Send this signal" position="top"/>
     </p:column>
   </p:dataTable>
 
