--- a/workflow-ui/webContent/includes/components/caseDetails/description.xhtml
+++ b/workflow-ui/webContent/includes/components/caseDetails/description.xhtml
@@ -1,7 +1,8 @@
 <ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:f="http://xmlns.jcp.org/jsf/core"
   xmlns:h="http://xmlns.jcp.org/jsf/html" xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
   xmlns:c="http://xmlns.jcp.org/jsp/jstl/core" xmlns:ic="http://ivyteam.ch/jsf/component"
-  xmlns:p="http://primefaces.org/ui" xmlns:pe="http://primefaces.org/ui/extensions">
+  xmlns:p="http://primefaces.org/ui" xmlns:pe="http://primefaces.org/ui/extensions"
+  xmlns:jc="http://java.sun.com/jsf/composite/components">
 
   <p:panelGrid columns="4" layout="grid" styleClass="ui-panelgrid-blank"
     columnClasses="no-padding-left ui-g-6 ui-md-2, ui-g-6 ui-md-4, no-padding-left ui-g-6 ui-md-2, ui-g-6 ui-md-4">
@@ -15,7 +16,7 @@
     <h:outputText value="#{casesDetailsBean.selectedCase.ownerName}" id="taskResponsible" />
 
     <h:outputText value="Creator" />
-    <h:outputText value="#{casesDetailsBean.selectedCase.creatorUserName}" id="creatorUser" />
+    <jc:user user="#{casesDetailsBean.selectedCase.creatorUser}" id="creatorUser" />
 
     <h:outputText value="Created" />
     <h:outputText value="#{dateTimeBean.getDateTime(casesDetailsBean.selectedCase.getStartTimestamp())}"
