--- a/workflow-ui/webContent/includes/components/casesTable.xhtml
+++ b/workflow-ui/webContent/includes/components/casesTable.xhtml
@@ -1,7 +1,8 @@
 <ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:f="http://xmlns.jcp.org/jsf/core"
   xmlns:h="http://xmlns.jcp.org/jsf/html" xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
   xmlns:c="http://xmlns.jcp.org/jsp/jstl/core" xmlns:ic="http://ivyteam.ch/jsf/component"
-  xmlns:p="http://primefaces.org/ui" xmlns:pe="http://primefaces.org/ui/extensions">
+  xmlns:p="http://primefaces.org/ui" xmlns:pe="http://primefaces.org/ui/extensions"
+  xmlns:jc="http://java.sun.com/jsf/composite/components">
 
   <p:dataTable id="cases" var="case" value="#{casesBean.casesDataModel}" widgetVar="casesTable"
     emptyMessage="No Cases found with given criteria" style="margin-top:10px" lazy="true" paginatorPosition="bottom"
@@ -29,7 +30,7 @@
     </p:column>
 
     <p:column headerText="Creator" filterBy="#{case.getCreatorUserName()}">
-      <h:outputText value="#{case.getCreatorUserName()}" />
+      <jc:user user="#{case.creatorUser}"/>
     </p:column>
 
     <p:column headerText="Start Date" style="text-align: center;">
