--- a/workflow-ui/webContent/includes/components/workflowEventsTable.xhtml
+++ b/workflow-ui/webContent/includes/components/workflowEventsTable.xhtml
@@ -1,7 +1,8 @@
 <ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:f="http://xmlns.jcp.org/jsf/core"
   xmlns:h="http://xmlns.jcp.org/jsf/html" xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
   xmlns:c="http://xmlns.jcp.org/jsp/jstl/core" xmlns:ic="http://ivyteam.ch/jsf/component"
-  xmlns:p="http://primefaces.org/ui" xmlns:pe="http://primefaces.org/ui/extensions">
+  xmlns:p="http://primefaces.org/ui" xmlns:pe="http://primefaces.org/ui/extensions"
+  xmlns:jc="http://java.sun.com/jsf/composite/components">
     <p:dataTable id="events" var="event" value="#{tasksDetailsBean.selectedTask.getWorkflowEvents()}" widgetVar="eventsTable"
       emptyMessage="No Events found with given criteria" reflow="true">
 
@@ -18,7 +19,7 @@
       </p:column>
 
       <p:column headerText="Author" sortBy="#{event.getUserName()}">
-        <h:outputText value="#{event.getUserName()}" id="eventAuthor"/>
+        <jc:user user="#{event.user}" id="eventAuthor"/>
       </p:column>
 
       <p:column headerText="Content">
